# Serialization

./: .gitignore  CMakeLists.txt  README.md  combined_test.json  playback_test.json  recording_test.json
src/: calibration_pipeline.hpp  components.hpp  interfaces.hpp  main.cpp  players.hpp  recorders.hpp  types.hpp
tests/: SerializationTests.cpp
